# immich_ai

./: Cargo.toml  README.md
src/: main.rs  model_registry.rs  models.rs
